SynProdGITV1/force-app/main/default/objects/File_Link__c/File_Link__c.object-meta.xml
<CustomObject>
    <description>Custom object to store URLs - mainly used for storing file links</description>
    <label>File Link</label>
    <nameField>
        <label>File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>File Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>