SynProdGITV1/force-app/main/default/objects/File_Link__c/fields/Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plan</label>
    <referenceTo>AccountPlan</referenceTo>
    <relationshipLabel>File Links</relationshipLabel>
    <relationshipName>File_Links</relationshipName>
    <type>Lookup</type>
</CustomField>