SynProdGITV1/force-app/main/default/objects/File_Link__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Custom lookup field to Case</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>File Links</relationshipLabel>
    <relationshipName>File_Links</relationshipName>
    <type>Lookup</type>
</CustomField>