SynProdGITV1/force-app/main/default/objects/File_Link__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Custom field lookup to opportunity</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>File Links</relationshipLabel>
    <relationshipName>File_Links</relationshipName>
    <type>Lookup</type>
</CustomField>